--- a/package.json
+++ b/package.json
@@ -10,27 +10,26 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/murali2665/test.git"
+    "url": "git+https://github.com/muralikrishnay479/kiraay-backend.git"
   },
   "author": "murali",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/murali2665/test/issues"
+    "url": "https://github.com/muralikrishnay479/kiraay-backend/issues"
   },
-  "homepage": "https://github.com/murali2665/test#readme",
+  "homepage": "https://github.com/muralikrishnay479/kiraay-backend#readme",
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "cloudinary": "^2.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-async-handler": "^1.2.0",
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.12.1",
-    "multer": "^1.4.5-lts.1"
+    "mongoose": "^8.12.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
   }
+}  }
 }
